--- a/Views/Citizen/Register.cshtml
+++ b/Views/Citizen/Register.cshtml
@@ -197,12 +197,21 @@
 
                     });
                 },
+                sendHeaders() {
+                    $.ajaxSetup({
+                        headers: {
+                            'Authorization': getCookie('token')
+                        }
+                    });
+                }
+
 
 
             },
             computed: {
             },
             mounted() {
+                this.sendHeaders();
                 this.getProfessions();
                 window.initMap = this.initMap;
 
