--- a/Views/Officer/CitizenDetails.cshtml
+++ b/Views/Officer/CitizenDetails.cshtml
@@ -173,7 +173,6 @@
                     url: 'https://edu.santhawa.lk/apiv1/citizen/' + String(this.editCitizenNic.nic),
                     type: 'GET',
                     contentType: 'application/json',
-                    headers: { "Authorization": "KBL08wP3ClWhNsEJ2kWlCvN5H1wZjcCo" },
                     success: function (data, status, response) {
                         console.log(data);
                         clearMarkers();
@@ -200,9 +199,7 @@
                 var xhr = new XMLHttpRequest();
                 xhr.open("PUT", url);
 
-                xhr.setRequestHeader("Content-Type", "application/json");
-
-                xhr.setRequestHeader("Authorization", "KBL08wP3ClWhNsEJ2kWlCvN5H1wZjcCo");
+                xhr.setRequestHeader("Authorization", getCookie('userId'));
 
                 xhr.onreadystatechange = function () {
 
@@ -224,8 +221,6 @@
 
                 xhr.setRequestHeader("Content-Type", "application/json");
 
-                xhr.setRequestHeader("Authorization", "KBL08wP3ClWhNsEJ2kWlCvN5H1wZjcCo");
-
                 xhr.onreadystatechange = function () {
 
                     if (xhr.readyState === 4) {
@@ -237,7 +232,15 @@
                 var data = '{"validation":"1"}';
 
                 xhr.send(data);
+            },
+            sendHeaders() {
+                $.ajaxSetup({
+                    headers: {
+                        'Authorization': getCookie('token')
+                    }
+                });
             }
+
            
 
 
@@ -246,6 +249,7 @@
 
         },
         mounted() {
+            this.sendHeaders();
             window.initMap = this.initMap;
             if (param != null)
                 this.getCitizenDetail();
