--- a/Views/Citizen/Home.cshtml
+++ b/Views/Citizen/Home.cshtml
@@ -176,12 +176,20 @@
 
                 });
             },
+            sendHeaders() {
+                $.ajaxSetup({
+                    headers: {
+                        'Authorization': getCookie('token')
+                    }
+                });
+            }
 
 
         },
         computed: {
         },
         mounted() {
+            this.sendHeaders();
             this.getProfessions();
             window.initMap = this.initMap;
 
