--- a/Views/Officer/Complaint.cshtml
+++ b/Views/Officer/Complaint.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "CitizenComplaint";
+    ViewBag.Title = "Complaint";
     Layout = "~/Views/Shared/_CitizenLayout.cshtml";
 }
 <div id="divCitizenComplaint" class="justify-content-center" v-cloak>
@@ -9,38 +9,25 @@
             <form id="frmCitizenComplaint">
                 <h3> Citizen Complain</h3>
                 <div class="form-row">
-                    <div class="form-group col-8">
-                        <div class="col-12 float-start px-0 px-md-1">
-                            <textarea id="txtComplaint" name="txtComplaint" class="form-control text-area" placeholder="Type Your Qualification Here !!!!" v-model="complaint.complaint" rows="3"></textarea>
-                        </div>
-                    </div>
-
-                    <div class="form-group col-4">
-                        <div class="form-field mb-2">
-                            <button type="button" @@click="CreateComplaint" class="col-6 btn btn-primary">Lodge Complaint</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-row">
                     <div class="card-body">
                         <b-table striped hover :items="complaints" :fields="fields">
                             <template #cell(Response)="data">
                                 <button v-if="data.item.response === null || data.item.response ===''" type="button" class="btn btn-outline-danger" title="Responded" disabled>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
-                                        <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
-                                        <path d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
-                                    </svg>
-                                </button>
-                                <button v-if="data.item.response" type="button" class="btn btn-outline-success" title="Responded" disabled>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
                                         <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
                                         <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z" />
                                     </svg>
                                 </button>
+                                <button v-if="data.item.response" type="button" class="btn btn-outline-success" title="Responded" disabled>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
+                                        <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
+                                        <path d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
+                                    </svg>
+                                </button>
 
                             </template>
                             <template #cell(Actions)="data">
-                                <button v-if="data.item.response" type="button" class="btn btn-outline-primary" @@click="getComplainDetails(data.item.id)" title="View Response">
+                                <button  type="button" class="btn btn-outline-primary" @@click="getComplainDetails(data.item.id)" title="View Response">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-view-list" viewBox="0 0 16 16">
                                         <path d="M3 4.5h10a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2zm0 1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1H3zM1 2a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13A.5.5 0 0 1 1 2zm0 12a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13A.5.5 0 0 1 1 14z" />
                                     </svg>
@@ -56,7 +43,7 @@
 </div>
 
 @section Scripts {
-<script>
+    <script>
 
     Vue.config.devtools = true;
 
@@ -106,20 +93,13 @@
 
     },
     methods: {
-        CreateComplaint() {
-            $.post('https://edu.santhawa.lk/apiv1/complaint', vueCitizenComplaint.complaint, function (response) {
-                alert("You have successfully lodged a complaint");
-                
-            })
-                .fail(function (response) { alert('Error' + response.responseText) });
-        },
         getComplaintByCitizenId() {
-            $.get('https://edu.santhawa.lk/apiv1/citizen/' + this.complaint.citizen_id + '/complaint', function (data, status, response) {
+            $.get('https://edu.santhawa.lk/apiv1/complaint', function (data, status, response) {
                 vueCitizenComplaint.complaints = data;
             })
         },
         getComplainDetails(id) {
-            window.open("https://localhost:44354/Citizen/ResponseDetail?id=" + id);
+            window.open("https://localhost:44354/Officer/ResponseDetail?id=" + id);
         },
         fetchTable() {
             setInterval(function () {
@@ -135,6 +115,7 @@
         }
 
 
+
     },
     computed: {
         },
@@ -142,15 +123,16 @@
         this.getComplaintByCitizenId();
         this.fetchTable();
         this.sendHeaders();
-        
+
         },
 
     });
 
-    
 
-</script>
+
+    </script>
 }
+
 
 
 
