--- a/Views/Officer/Citizens.cshtml
+++ b/Views/Officer/Citizens.cshtml
@@ -120,11 +120,22 @@
             mounted() {
                 this.sendHeaders();
                  this.getCitizens();
-                 // this.getCitizenDetails();
+                 //this.getCitizenDetails();
 
              },
     });
-
+        if (getCookie('token') != null) {
+            $.ajax({
+                url: "https://edu.santhawa.lk/apiv1/login/check",
+                type: "GET",
+                beforeSend: function (xhr) { xhr.setRequestHeader('Authorization', getCookie('token')); },
+                success: function () { }
+            })
+                .fail(function (response) { eraseCookie("token"); window.location.href = "/Login"; });
+        }
+        else {
+            window.location.href = "/Login";
+        }
     </script>
 }
 
