--- a/Views/Shared/_CitizenLayout.cshtml
+++ b/Views/Shared/_CitizenLayout.cshtml
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/vue-select/dist/vue-select.css" />
     <link rel="stylesheet" type="text/css" href="\Content\jquery.datetimepicker.css" />
+    <link rel="stylesheet" type="text/css" href="/Content/iziToast.css" />
+    <script src="~/Scripts/iziToast.js"></script>
     <script src="~/Scripts/function.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
@@ -24,12 +26,19 @@
             <img src="https://iconape.com/wp-content/files/lc/258474/svg/258474.svg" width="100" height="100" class="d-inline-block align-top" alt="">
         </a>
         <div class="nav">
-            <h3><a class="nav-item nav-link active" href="/Citizen/Home">Home <span class="sr-only">(current)</span></a></h3>
+            <h3><a class="nav-item nav-link active" href="/Citizen">Home<span class="sr-only">(current)</span></a></h3>
+            <h3><a class="nav-item nav-link active" href="/Citizen/Home">Edit Profile</a></h3>
             <h3><a class="nav-item nav-link" href="/Citizen/Qualification">Qualification</a></h3>
-            <h3><a class="nav-item nav-link" href="/Citizen/CtitzenComplaint">Complaints</a></h3>
+            <h3><a class="nav-item nav-link" href="/Citizen/CitizenComplaint">Complaints</a></h3>
             <h3><a class="nav-item nav-link" href="/Citizen/UpdateLocation">Location</a></h3>
         </div>
 
+        <button type="button" class="btn btn-outline-danger" @@click="logout" title="Logout">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M3.5 6a.5.5 0 0 0-.5.5v8a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-8a.5.5 0 0 0-.5-.5h-2a.5.5 0 0 1 0-1h2A1.5 1.5 0 0 1 14 6.5v8a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-8A1.5 1.5 0 0 1 3.5 5h2a.5.5 0 0 1 0 1h-2z" />
+                <path fill-rule="evenodd" d="M7.646.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 1.707V10.5a.5.5 0 0 1-1 0V1.707L5.354 3.854a.5.5 0 1 1-.708-.708l3-3z" />
+            </svg>
+        </button>
         <a class="navbar-brand" href="#">
             <img src="https://eservices.immigration.gov.lk/vs/images/immigration-logo.png" width="100" height="100" class="d-inline-block align-top" alt="">
         </a>
